// material
import 'package:flutter/material.dart';

final List<BottomNavigationBarItem> bnbElements = [
  const BottomNavigationBarItem(label: '人気', icon: Icon(Icons.stars)),
  const BottomNavigationBarItem(label: 'ユーザー', icon: Icon(Icons.person)),
  const BottomNavigationBarItem(label: 'ホーム', icon: Icon(Icons.home)),
  const BottomNavigationBarItem(label: '最新', icon: Icon(Icons.update)),
  const BottomNavigationBarItem(label: '課金', icon: Icon(Icons.subscriptions)),
];
