// packages
import 'package:great_talk/app/flavors.dart';

final appName = F.title;

// msg
const String clearChatMsg = "チャット履歴を全て削除しました";
const String calculateFailedMsg = '計算結果が取得できませんでした';
const String wrongInfoMsg = """
注意
AIからの返事は誤った内容が含まれることがあります。
あくまでエンターテイメントとしてご利用ください。
ご理解のほどよろしくお願いいたします。

また、利用規約とプライバシーポリシーもご確認ください。
""";
// text
const String tosText = "利用規約";
const String privacyPolicyText = "プライバシーポリシー";
const String agreeText = "上記の内容、利用規約、プライバシーポリシーに同意する";

const String okText = "OK";
const String cancelText = "キャンセル";
// initialName
const noName = "名無し";
